@@ -4,6 +4,8 @@ import com.google.gson.Gson;
 import model.GameData;
 import model.UserData;
 import server.Server;
+
+import java.io.ByteArrayOutputStream;
 import java.io.IOException;
 import java.io.InputStream;
 import java.io.OutputStream;
@@ -11,6 +13,7 @@ import java.net.HttpURLConnection;
 import java.net.URI;
 import java.net.URISyntaxException;
 import java.net.URL;
+import java.nio.charset.StandardCharsets;
 
 
 public class ServerFacade {
@@ -25,28 +28,33 @@ public class ServerFacade {
         }
     }
 
+    private String inputStreamToString(InputStream is) throws IOException {
+        ByteArrayOutputStream result = new ByteArrayOutputStream();
+        byte[] buffer = new byte[1024];
+        for (int length; (length = is.read(buffer)) != -1; ) {
+            result.write(buffer, 0, length);
+        }
+        // StandardCharsets.UTF_8.name() > JDK 7
+        return result.toString(StandardCharsets.UTF_8);
+    }
     public GameData[] listGames(String authToken) throws IOException {
-        URL url = new URL("http://localhost:8080/game");
+        URL url = null;
+        try {
+            url = new URI("http://localhost:8080/game").toURL();
+        } catch (URISyntaxException e) {
+            throw new RuntimeException(e);
+        }
         HttpURLConnection connection = (HttpURLConnection) url.openConnection();
         connection.setReadTimeout(5000);
         connection.setRequestMethod("GET");
-        // Set HTTP request headers, if necessary
-        // connection.addRequestProperty("Accept", "text/html");
         connection.addRequestProperty("Authorization", authToken);
         connection.connect();
         if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
-            // Get HTTP response headers, if necessary
-            // Map<String, List<String>> headers = connection.getHeaderFields();
-
-            // OR
-
-            //connection.getHeaderField("Content-Length");
-
             InputStream responseBody = connection.getInputStream();
-            return gson.fromJson(responseBody.toString(), GameData[].class);
+            record GamesList(GameData[] games) {}
+            GamesList gamesList = gson.fromJson(inputStreamToString(responseBody), GamesList.class);
+            return gamesList.games();
         } else {
-            // SERVER RETURNED AN HTTP ERROR
-
             InputStream responseBody = connection.getErrorStream();
             // Read and process error response body from InputStream ...
         }
@@ -103,7 +111,9 @@ public class ServerFacade {
         }
         if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
             InputStream responseBody = connection.getInputStream();
-            return responseBody.toString();
+            record LoginResponse(String authToken, String username) {}
+            LoginResponse fromJson = gson.fromJson(inputStreamToString(responseBody), LoginResponse.class);
+            return fromJson.authToken();
         }
         else { // Error
             InputStream responseBody = connection.getErrorStream();
@@ -111,7 +121,7 @@ public class ServerFacade {
         }
     }
 
-    public int createGame(String gameName) throws IOException {
+    public int createGame(String authToken, String gameName) throws IOException {
         URL url = null;
         try {
             url = new URI("http://localhost:%s/game".formatted(8080)).toURL();
@@ -122,8 +132,7 @@ public class ServerFacade {
         connection.setReadTimeout(5000);
         connection.setRequestMethod("POST");
         connection.setDoOutput(true);
-        // Set HTTP request headers, if necessary
-        // connection.addRequestProperty("Accept", "text/html");
+        connection.addRequestProperty("Authorization", authToken);
         connection.connect();
         try(OutputStream requestBody = connection.getOutputStream()) {
             String json = "{\"gameName\":\"%s\"}".formatted(gameName);
@@ -132,7 +141,8 @@ public class ServerFacade {
 
         if (connection.getResponseCode() == HttpURLConnection.HTTP_OK) {
             InputStream responseBody = connection.getInputStream();
-            record CreateResponse(int gameID) {};
+            System.out.println(inputStreamToString(responseBody));
+            record CreateResponse(int gameID) {}
             CreateResponse createResponse = gson.fromJson(responseBody.toString(), CreateResponse.class);
             return createResponse.gameID();
         }
